--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bundler</title>
+    <title>Pasapalabra</title>
     <script defer src="./index.js"></script>
   </head>
   <body>
     <section class="wrapper">
+      <h1 class="title">Pasapalabra</h1>
       <ul class="donut">
         <li id="a" class="circle unanswered letterA">A</li>
         <li id="b" class="circle unanswered letterB">B</li>
@@ -35,6 +36,18 @@
         <li id="y" class="circle unanswered letterY">Y</li>
         <li id="z" class="circle unanswered letterZ">Z</li>
       </ul>
+      <div class="question">
+        <p>
+          Con la B: Juego que ha sacado de quicio a todos los Skylabers en las
+          sesiones del precurso?
+        </p>
+      </div>
+      <form class="form">
+        <input class="input" type="text" placeholder="Escribe aqui" />
+        <input class="aceptar-button" type="button" value="ACEPTAR" />
+        <input class="pasapalabra-button" type="button" value="PASAPALABRA" />
+        <input class="abandonar-button" type="button" value="ABANDONAR" />
+      </form>
     </section>
   </body>
 </html>
