--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
       </div>
       <form id="form" class="form">
         <input
-          name="answer"
+          name="input"
           class="input"
           type="text"
           placeholder="Escribe aqui"
