--- a/src/index.html
+++ b/src/index.html
@@ -11,31 +11,32 @@
     <section class="donutWrapper">
       <h2 class="title">Pasapalabra</h2>
       <ul class="donut">
-        <li id="a" class="circle letterA">A</li>
-        <li id="b" class="circle letterB">B</li>
-        <li id="c" class="circle letterC">C</li>
-        <li id="d" class="circle letterD">D</li>
-        <li id="e" class="circle letterE">E</li>
-        <li id="f" class="circle letterF">F</li>
-        <li id="g" class="circle letterG">G</li>
-        <li id="h" class="circle letterH">H</li>
-        <li id="i" class="circle letterI">I</li>
-        <li id="j" class="circle letterJ">J</li>
-        <li id="l" class="circle letterL">L</li>
-        <li id="m" class="circle letterM">M</li>
-        <li id="n" class="circle letterN">N</li>
-        <li id="ñ" class="circle letterÑ">Ñ</li>
-        <li id="o" class="circle letterO">O</li>
-        <li id="p" class="circle letterP">P</li>
-        <li id="q" class="circle letterQ">Q</li>
-        <li id="r" class="circle letterR">R</li>
-        <li id="s" class="circle letterS">S</li>
-        <li id="t" class="circle letterT">T</li>
-        <li id="u" class="circle letterU">U</li>
-        <li id="v" class="circle letterV">V</li>
-        <li id="x" class="circle letterX">X</li>
-        <li id="y" class="circle letterY">Y</li>
-        <li id="z" class="circle letterZ">Z</li>
+        <li id="a" class="circle">A</li>
+        <li id="b" class="circle">B</li>
+        <li id="c" class="circle">C</li>
+        <li id="d" class="circle">D</li>
+        <li id="e" class="circle">E</li>
+        <li id="f" class="circle">F</li>
+        <li id="g" class="circle">G</li>
+        <li id="h" class="circle">H</li>
+        <li id="i" class="circle">I</li>
+        <li id="j" class="circle">J</li>
+        <li id="k" class="circle">K</li>
+        <li id="l" class="circle">L</li>
+        <li id="m" class="circle">M</li>
+        <li id="n" class="circle">N</li>
+        <li id="o" class="circle">O</li>
+        <li id="p" class="circle">P</li>
+        <li id="q" class="circle">Q</li>
+        <li id="r" class="circle">R</li>
+        <li id="s" class="circle">S</li>
+        <li id="t" class="circle">T</li>
+        <li id="u" class="circle">U</li>
+        <li id="v" class="circle">V</li>
+        <li id="w" class="circle">W</li>
+        <li id="x" class="circle">X</li>
+        <li id="y" class="circle">Y</li>
+        <li id="z" class="circle">Z</li>
       </ul>
       <div class="questionWrapper">
         <p id="question"></p>
