Added a appendAnswer funtion.

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,8 @@
         <li id="z" class="circle">Z</li>
       </ul>
       <div class="questionWrapper">
-        <p id="question"></p>
+        <p id="questionContainer"></p>
+        <p id="answerContainer"></p>
       </div>
       <form id="form" class="form">
         <input
