Added the triggerTheTimer function.

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
         />
         <button type="submit" class="aceptar-button">ACEPTAR</button>
       </form>
+      <div class="timer">Tiempo: <span id="timer"></span>s</div>
     </section>
   </body>
 </html>
