--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
           <tr>
             <th>Nombre</th>
             <th>Aciertos</th>
-            <th>Errores</th>
+            <th>Medalla</th>
           </tr>
         </thead>
         <tbody>
