Added autofocus and a required to the input.

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -35,6 +35,7 @@
             type="text"
             name="name"
             placeholder="Introduce tu nombre"
+            autofocus
             required
           />
           <button class="info__btn" type="submit">Play</button>
@@ -84,6 +85,7 @@
           class="input"
           type="text"
           placeholder="Escribe aqui"
+          required
         />
         <button type="submit" class="aceptar-button">ACEPTAR</button>
       </form>
